Grease Pencil shapes don't show preview before committing #125687
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#125687
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 11
Graphics card: NVidia GeForce RTX 2070
Blender Version
Broken: 4.2.0 LTS
Worked: 4.1.1
Short description of error
When drawing any shape in Draw Mode - Line, Box, Circle - using a fill material, no preview appears until hitting Return to Commit. Previous versions would show preview to aid with placement and editing.
Exact steps for others to reproduce the error
Open new 2D Animation Preset in Blender 4.2.0 LTS
In Draw mode,Select a brush, give it a material with fill, no stroke (default solid fill, for example)
select Line, Polyline, Arc, Curve, Box or Circle Tool in draw mode
click and drag
No shape appears - handles are visible.
Hi, thanks for the report. Can confirm
Broke between
e0e6dc8550f1 - 7226b5272871
, bisecting furtherWas able to repro it once, but not any more. I'm not sure which action "fixed" the drawing:
Something got tagged/flagged/updated which fixed the fill drawing, and now i can't get it back to a repro-able state. Might be a shader that needed compiling perhaps?
Also worth pointing out that some of the shapes like Arc and Curve start out "flat" with no visible area, so the fill isn't visible until adding more points or moving the control handles. Should be visible for rectangles and circles though.
@PratikPB2123 Since it's so easy to get into a non-repro state i would take the bisect with a grain of salt. You might see a "good" commit and it never goes back to a "bad" commit. Could you still repro the issue after bisect was finished?
I'm bisecting already, just one step away...
Git bisect points to
eec9c50580
@filedescriptor ^ :)
I was looking at the other reports then lunch, so bisecting was bit delayed 😅
Hang on, does that mean hiding the fill color is actually intentional, and fill showing up is the broken part?
Ah, indeed. Just looked at the responsible commit.
I'm bit confused now. That property is not exposed in UI for primitives o_o
(By default property is enabled so fill color should be visible anyways)
show_lasso
/GP_BRUSH_DISSABLE_LASSO
property is only in theGreasePencilDisplayPanel
, but this panel never seems to be drawn.show_lasso
setting on the "Pencil" brush fromTrue
toFalse
using the python API it renders primitive like this:Also can confirm: this will occur if a shape is the first selected tool to be drawn on with a fill material. It will happen on each grease pencil object. For example: if it has worked on Stroke.001 and you add a new object (stroke.002) and attempt to draw a new shape, the same error occurs.
I've just tried this with 4.2.1 RC
449c4fc72e
and it is still thereSame thing, i could repro it once and now it doesn't happen any more. Reeks of uninitialized memory to me, but ASAN is quiet.
Yeah, if I play with the tools and settings, issue does not happen sometimes. I wonder how
eec9c50580
affected the behavior, gotta add few breakpoints to check this :)Can anyone reproduce this?
@filedescriptor hi, not anymore. Can be closed I guess :)
I haven't had time to try yet, but did someone compare this to the issue with changing brushes (#124461)? That seems like a plausible explanation for why it's difficult to repro.
I don't think #124461 is related.
active_material_index
not changing after switching brushes is possibly an issue associated with brush asset system.Whereas, the bug here was replicable with correct fill material :)
I could repro it only once, but that doesn't mean the bug is gone ...
I can confirm that the bug still exists. When I create a rectangle with only fill selected in Blender, it doesn't preview the object until after I press enter to commit, which makes trying to place the objects a bit tedious.
System Info
OS: MacOS Sequoia 15.0.1
CPU: M1
Version Affected
Blender 4.2.3 LTS
A screen recording of Blenders behavior is given below
@fclem Maybe this is another issue in one of the shaders then? Since it seems like it happens consistently on macOS.
This is still broken in Windows. What I've seen: Once you draw with the Draw tool on a GP object and a Solid fill, drawing with any of the Shape tools (Line, Circle, Box, etc.) previews correctly on that GP object only. If you draw with Shape tools before using the Draw tool, the preview does not work as described in previous comments above. This is 100% reproducible on my system.
System Information
Operating system: Windows 10
Graphics card: NVidia GeForce RTX 2070 Super
Blender Version
Broken: 4.2.3 LTS
Thanks for confirming. I think I confused myself and mixed up this report with another that's in 4.3, not 4.2 LTS. Will check.
I can reproduce and confirm this behavior 100% of the time as well. There's also a user on Blender Stack Exchange who reported this https://blender.stackexchange.com/questions/327074/drawing-mode-solid-fill-box-tool-bug-or-is-this-normal?noredirect=1