Fix #125687: Grease Pencil shapes not showing before committing

Broken by eec9c50580d0ce9c1f0c25d913ddd39ba9419c23.
During drawing, there is a `fill_opacity_fac` that wasn't initialized
correctly for the primitives.
This caused the fills to be rendered with an opacity of 0.
Now, this uses an opacity factor of 1.

Pull Request: https://projects.blender.org/blender/blender/pulls/132856